syntax = "proto3";

package Protocol;

option csharp_namespace = "Google.Protobuf.Protocol";

enum MsgId{
    None = 0;
    S2C_BROADCASTENTERGAME = 1;
    C2S_LEAVEGAME = 2;
    S2C_BROADCASTLEAVEGAME = 3;
    S2C_PLAYERLIST = 4;
    C2S_MOVE = 5;
    S2C_BROADCASTMOVE = 6;
}

message S2C_BroadcastEnterGame {
    int32 playerId = 1;
    float posX = 2;
    float posY = 3;
    float posZ = 4;
}

message C2S_LeaveGame {
}

message S2C_BroadcastLeaveGame {
    int32 playerId = 1;
}

message S2C_PlayerList {
    repeated Player players = 1;

    message Player {
        bool isSelf = 1;
        int32 playerId = 2;
        float posX = 3;
        float posY = 4;
        float posZ = 5;
    }
}

message C2S_Move {
    float posX = 1;
    float posY = 2;
    float posZ = 3;
}

message S2C_BroadcastMove {
    int32 playerId = 1;
    float posX = 2;
    float posY = 3;
    float posZ = 4;
}
